<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">时光飞逝</string>
    <string name="hello_world">Welcome to Fast-Forward</string>
    <string name="btn_open">Open Other Activity</string>
    <string name="btn_exit">注销并退出</string>
    <string name="btn_exit_act">退出当前Activity</string>
    <string name="exit_confirm_msg">你确定要注销并退出吗？\n(退出不会删除任何缓存数据！)</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <string name="action_settings">设置</string>
    <string name="splash_msg">嘀嗒、嘀嗒、嘀嗒，时光飞逝。</string>
    <string name="splash_version">&#169;CopyRight ZengCS 2014</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="dft_file_name">时光飞逝.mp4</string>

    <!-- Dialog title -->
    <string name="txt_dialog_confirm">确认对话框</string>
    <string name="txt_dialog_message">消息对话框</string>
    <string name="txt_dialog_process">加载对话框</string>
    <string name="txt_dialog_bottom">底部弹出式对话框</string>
    <string name="txt_spinner_anim">请选择动画类型！</string>

    <!-- Dialog -->
    <string name="txt_alertdialog_title">提示</string>
    <string name="txt_alertdialog_title_success">找回成功</string>
    <string name="txt_alertdialog_title_failed">找回失败</string>
    <string name="txt_confirm">确定</string>
    <string name="txt_return">返回</string>
    <string name="txt_share">分享</string>
    <string name="dialog_dft_title">温馨提示</string>
    <string name="txt_ok">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_i_know">我知道了</string>
    <string name="txt_add">添加</string>
    <string name="txt_about">关于</string>
    <string name="txt_start">开始</string>
    <string name="txt_back">返回</string>
    <string name="dft_loading_txt">Loading&#8230;</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_image_zoom">ImageZoomActivity</string>
    <string name="title_activity_video_thum">VideoThumActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_custom_dialog">CustomDialogActivity</string>
    <string name="title_activity_volley">VolleyActivity</string>
    <string name="title_activity_recommend_course">RecommendCourseActivity</string>
    <string name="title_activity_green_dao">GreenDaoActivity</string>
    <string name="title_activity_text_switcher">TextSwitcherActivity</string>
    <string name="title_activity_expandable_list">ExpandableListActivity</string>

    <!-- data -->
    <string name="data_load_db">读取数据库成功！</string>
    <string name="data_loading">数据加载中&#8230;</string>
    <string name="data_load_success">数据加载成功！</string>
    <string name="data_load_failed">数据加载失败！</string>
    <string name="count_morethan_99">99+</string>

    <!-- 功能介绍Description -->
    <string name="act_info">具体代码请查看:\n%1$s\n\n%2$s</string>
    <string name="link_info">时光飞逝：ZengCS\n腾讯扣扣：417327734\n\n腾讯邮箱：\nzengcs@vip.qq.com\n谷歌邮箱：\nzcs417327734@gmail.com\n\n联系地址：\n天府软件园D·成都·四川·中国</string>
    <string name="source_info">项目源码GitHub地址:\nhttps://github.com/zcs417327734/FastForward\n\n电子邮箱:zengcs@vip.qq.com</string>
    <string name="act_desc">当前Activity的功能简介</string>
    <string name="multi_touch_desc">多点触控，实现图片拖拽与缩放！</string>
    <string name="video_thum_desc_scaning">正在扫描视频文件，请稍后&#8230;</string>
    <string name="video_thum_desc">共为你找到 %1$s 个视频文件！</string>
    <string name="custom_dialog_desc">自定义对话框！</string>
    <string name="volley_desc">通过Volley加载网络图片！</string>
    <string name="recommend_course_desc">推荐您学习的课程！</string>
    <string name="green_dao_desc">Android数据库框架GreenDAO！</string>
    <string name="text_switcher_desc">利用TextSwitcher制作数字时钟！</string>
    <string name="image_switcher_desc">利用ImageSwitcher制作焦点图！</string>
    <string name="view_pager_focus_desc">利用ViewPager制作焦点图！</string>
    <string name="expandablelist_desc">使用ExpandableList实现好友列表！</string>
    <string name="check_list_desc">带CheckBox的ListView实现全选！</string>
    <string name="img_animation_type">图片切换时动画类型</string>
    <string name="gif_view_desc">自定义GifView实现gif图片播放！</string>
    <string name="gif_view_notice">1.当前Activity必须关闭硬件加速,在AndroidManifest.xml中为对应的Activity添加[android:hardwareAccelerated=\"false\"]\n\n2.必须在布局文件顶部引入[xmlns:android_custom=\"http://schemas.android.com/apk/res/com.zcs.fast.forward\"],否则无法使用自定义属性\n\n3.GifView设置的gif_name如果是一个非法的gif图片名称,那么将提示[无效图片]</string>
    <string name="title_activity_offline_download">OfflineDownloadActivity</string>
    <string name="dft_percent">10%</string>
    <string name="down_start">下载</string>
    <string name="down_init">初始化</string>
    <string name="down_continue">继续</string>
    <string name="down_pause">暂停</string>
    <string name="down_stop">停止</string>
    <string name="down_delete">删除</string>
    <string name="down_delete_ok">确认删除</string>
    <string name="down_click_start">点击开始下载</string>
    <string name="down_click_remove">已加入下载队列，点击移除</string>
    <string name="title_activity_view_flip">ViewFlipActivity</string>
    <string name="title_activity_view_pager_focus_image">ViewPagerFocusImageActivity</string>
    <string name="title_activity_list_view_check_all">ListViewCheckAllActivity</string>

</resources>