<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/dialog_bottom_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:textColor="@color/gray_dark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/dialog_bottom_btn_ok"
        style="@style/redBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/btn_exit_act" />

    <Button
        android:id="@+id/dialog_bottom_btn_cancel"
        style="@style/grayBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/txt_cancel" />

</LinearLayout>