<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OfflineDownloadActivity" >

    <include
        android:id="@+id/titlebar_download"
        layout="@layout/titlebar_activity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titlebar_download"
        android:padding="@dimen/activity_padding_normal" >

        <!-- Demo功能简介 -->

        <TextView
            android:id="@+id/demo_desc_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_corner_gray"
            android:drawableLeft="@drawable/ic_info"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/act_desc"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!-- Demo展示区域 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/demo_desc_tip" >

            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_init"
                    style="@style/blueBtn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:text="@string/down_init" />
                
                <Button
                    android:id="@+id/btn_stop"
                    style="@style/blueBtn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:text="@string/down_stop" />

                <Button
                    android:id="@+id/btn_delete"
                    style="@style/redBtn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/down_delete" />
            </LinearLayout>
			
            <ListView
                android:id="@+id/down_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/btn_layout">
            </ListView>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>