<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ImageSwitcherActivity" >

    <include
        android:id="@+id/titlebar_image_switcher"
        layout="@layout/titlebar_activity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titlebar_image_switcher"
        android:padding="@dimen/activity_padding_normal" >

        <!-- Demo功能简介 -->

        <TextView
            android:id="@+id/demo_desc_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_corner_gray"
            android:drawableLeft="@drawable/ic_info"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/image_switcher_desc"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!-- Demo展示区域 -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/demo_desc_tip" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_10p" >

                <TextView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="100dip"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/app_name" />

                <RelativeLayout
                    android:id="@+id/img_layout"
                    android:layout_width="match_parent"
                    android:layout_height="190dip"
                    android:layout_below="@id/header" >

                    <ImageSwitcher
                        android:id="@+id/imageSwicher"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center" >
                    </ImageSwitcher>

                    <!-- 存放小圆点的容器 -->

                    <LinearLayout
                        android:id="@+id/circle_layout"
                        android:layout_width="match_parent"
                        android:layout_height="20dip"
                        android:layout_alignParentBottom="true"
                        android:background="@color/black_30p"
                        android:gravity="center"
                        android:orientation="horizontal" >
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tip_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dip"
                    android:text="@string/img_animation_type"
                    android:textColor="@color/theme_blue"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tip_layout"
                    android:layout_marginTop="10dip"
                    android:background="@color/black_20p"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/anim_slide"
                        style="@style/blueBtn"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:text="SLIDE" />

                    <Button
                        android:id="@+id/anim_push"
                        style="@style/blueBtn"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip"
                        android:layout_weight="1"
                        android:text="PUSH" />

                    <Button
                        android:id="@+id/anim_zoom"
                        style="@style/blueBtn"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ZOOM" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>